// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ast invalid location returns name for an anon fn in global scope as undefined 1`] = `
Object {
  "index": 0,
  "name": undefined,
  "offset": Object {
    "column": 0,
    "line": 44,
  },
}
`;

exports[`ast invalid location returns the scope name for global scope as undefined 1`] = `
Object {
  "index": 0,
  "name": undefined,
  "offset": Object {
    "column": 0,
    "line": 10,
  },
}
`;

exports[`ast valid location returns name for a nested anon fn as the parent func 1`] = `
Object {
  "index": 0,
  "name": "outer",
  "offset": Object {
    "column": undefined,
    "line": 22,
  },
}
`;

exports[`ast valid location returns name for a nested named fn 1`] = `
Object {
  "index": 0,
  "name": "inner",
  "offset": Object {
    "column": undefined,
    "line": 1,
  },
}
`;

exports[`ast valid location returns name for an anon fn with a named variable 1`] = `
Object {
  "index": 0,
  "name": "globalDeclaration",
  "offset": Object {
    "column": undefined,
    "line": 1,
  },
}
`;

exports[`ast valid location returns the scope and offset 1`] = `
Object {
  "index": 0,
  "name": "math",
  "offset": Object {
    "column": undefined,
    "line": 5,
  },
}
`;
